# matic-release

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  changelog-config.json  ci.py  cliff.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  on-pull-request.yml  prerelease.yml  release.yml
matic_release/: __main__.py  config.py
matic_release/axioma/: exceptions.py  git.py  tag.py  version.py
matic_release/capabilities/: commit_analyzer.py  compute_tag.py  publish_tag.py
matic_release/integration/: git.py
tests/: compute_tag.py  test_commit_analyzer.py  test_compute_tag.py  test_version.py
