[tool.poetry]
name = "matic-release"
version = "0.1.0"
description = ""
authors = ["Christopher A. Flores <christopher.flores@codexitos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagger-io = "^0.8.4"
anyio = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-watch = "^4.2.0"
commitizen = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
]